# lemonbot

./: .gitignore  Cargo.toml  README.md  build.rs  lemonbot_settings.toml  lemonbot_settings.toml.example
.github/workflows/: rust.yml
src/: main.rs
