[package]
name = "lemonbot-rs"
version = "0.1.0"
authors = ["juvelomoth"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
ureq = { version = "^1.4.1", features = ["json"] }
serenity = "0.8"
regex = "1"
lazy_static = "*"
unic = "0.9.0"
config = "0.10.1"


[build-dependencies]
inline-python = "0.6.0"
unicode-normalization = "0.1.8"
unic = "0.9.0"

[target.x86_64-unknown-linux-musl]
rustflags = ["-C", "prefer-dynamic"]

[profile.release]
lto = true
#codegen-units = 1
panic = "abort"
