[package]
name = "lemonbot-rs"
version = "0.1.0"
authors = ["juvelomoth"]
edition = "2018"

[dependencies]
ureq = { version = "1.5.1", features = ["json"] }
serenity = "0.8.7"
regex = "1.3.9"
lazy_static = "1.4.0"
unic = "0.9.0"
config = "0.10.1"
dedup_iter = "0.1.1"
rand = "0.7.3"
thread_local = "1.0.1"
lazy-regex = "0.1.4"

[build-dependencies]
inline-python = "0.6.0"
unicode-normalization = "0.1.13"
unic = "0.9.0"
dedup_iter = "0.1.1"

[target.x86_64-unknown-linux-musl]
rustflags = ["-C", "prefer-dynamic"]

[profile.release]
lto = true
#codegen-units = 1
panic = "abort"
